# googledrivesync

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SETUP.md  conflict_resolver.py  drive_manager.py  pyproject.toml  requirements.txt  run_tests.py
.github/workflows/: ci.yml
src/google_drive_sync/: __init__.py  __main__.py  app.py  auth_manager.py  photos_manager.py  sync_engine.py
tests/: __init__.py  conftest.py  test_auth_manager.py  test_conflict_resolver.py  test_drive_manager.py  test_integration.py  test_photos_manager.py  test_sync_engine.py
