[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "google-drive-photos-sync"
version = "2.0.0"


description = "Sync media files between Google Drive and Google Photos"
readme = "README.md"
requires-python = ">=3.10"


authors = [{name = "iaminov", email = "iaminov@users.noreply.github.com"}]
license = {text = "MIT"}

