[build-system    "google-auth>=2.23.4",
    "Pillow>=10.1.0",
    "python-dateutil>=2.8.2",
    "requests>=2.31.0"
]
requires = ["setuptools>=68", "wheel"    "google-auth>=2.23.4",
    "Pillow>=10.1.0",
    "python-dateutil>=2.8.2",
    "requests>=2.31.0"
]
build-backend = "setuptools.build_meta"

[project    "google-auth>=2.23.4",
    "Pillow>=10.1.0",
    "python-dateutil>=2.8.2",
    "requests>=2.31.0"
]
name = "google-drive-photos-sync"
version = "2.0.0"


description = "Sync media files between Google Drive and Google Photos"
readme = "README.md"
requires-python = ">=3.10"


authors = [{name = "iaminov", email = "iaminov@users.noreply.github.com"}    "google-auth>=2.23.4",
    "Pillow>=10.1.0",
    "python-dateutil>=2.8.2",
    "requests>=2.31.0"
]
license = {text = "MIT"}


dependencies = [
    "google-api-python-client>=2.108.0",
    "google-auth-httplib2>=0.1.1",
    "google-auth-oauthlib>=1.1.0",
    "google-auth>=2.23.4",
    "Pillow>=10.1.0",
    "python-dateutil>=2.8.2",
    "requests>=2.31.0"
]




[project.scripts]
gdpsync = "google_drive_sync.app:main"



[tool.setuptools.packages.find]
where = ["src"]

